"Done compacting (approx. XX KB saved)" is overwritten by "Loading message..." when message pane is visible
Categories
(MailNews Core :: General, defect)
Tracking
(thunderbird_esr128 fixed)
Tracking | Status | |
---|---|---|
thunderbird_esr128 | --- | fixed |
People
(Reporter: francesco, Assigned: mkmelin)
References
(Blocks 1 open bug, Regressed 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
corey
:
approval-comm-esr128+
|
Details | Review |
I've compacted a large local folder. Once the compaction is done, the result "Done compacting (approx. XX KB saved)" gets overwritten by "Loading message...". It works fine when the preview pane is switched off.
Updated•1 year ago
|
Assignee | ||
Comment 2•6 months ago
|
||
This changes the status bar output to have FIFO queue (max size 10) of status messages.
If there's a queue, next message will be shown in 700ms, and then moving on the the next one until the queue is empty.
This allows the status messages to be seen before next message overwrites the previous one.
There are situations where there may be a whole lot of updates, in which case it seems ok to just
drop those messages (see bug 1864776). It just gets confusing in case the status updates are way late.
Updated•6 months ago
|
Updated•6 months ago
|
Updated•6 months ago
|
Assignee | ||
Updated•6 months ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/fa15d6b1fc22
"Done compacting (approx. XX KB saved)" is overwritten by "Loading message..." when message pane is visible. r=gds,tobyp
Assignee | ||
Comment 4•5 months ago
|
||
Comment on attachment 9444014 [details]
Bug 1901846 - "Done compacting (approx. XX KB saved)" is overwritten by "Loading message..." when message pane is visible. r=gds,#thunderbird-reviewers
[Approval Request Comment]
Regression caused by (bug #): bug 1890448
User impact if declined: non-optimal UI feedback
Testing completed (on c-c, etc.): c-c, beta
Risk to taking this patch (and alternatives if risky): fairly safe
Comment 5•5 months ago
|
||
Comment on attachment 9444014 [details]
Bug 1901846 - "Done compacting (approx. XX KB saved)" is overwritten by "Loading message..." when message pane is visible. r=gds,#thunderbird-reviewers
[Triage Comment]
Approved for esr128
Comment 6•5 months ago
|
||
bugherder uplift |
Thunderbird 128.6.1esr:
https://hg.mozilla.org/releases/comm-esr128/rev/344a8a27819f
This didn't really get fixed. The "Loading message..." is still displayed overwriting the message from the compaction, only that the compaction message is visible for a little longer. Overall, "Loading message..." is not really useful in this context.
Assignee | ||
Comment 8•5 months ago
|
||
Depends on how you look at it :-p
You now have the opportunity to see the text, which solves what I think was the actual problem. We don't suppress the "loading message..." and other status updates as they happen - I don't think that would be appropriate (+difficult to define how such a suppression mechanism actually should work in general).
Comment 10•7 days ago
|
||
Could we not just open the activity manager window on a click in the status bar to see the older events and those currently happening. Perhaps make it like a toaster fly up from the status bar instead of just opening a rather bland default activity manager dialog in the middle of the screen.
I accept that reading the status updates on the bar can be troublesome, but using the activity manager would obviate this obvious human speed issue by offering a leisurely look at everything that is happening and has happened in the current session.
It would be a fairly instant fix for the regressions as well as the timing would not be changed from the original default and there would be no need to just drop anything.
Description
•