Bug 1901846 - "Done compacting (approx. XX KB saved)" is overwritten by "Loading message..." when message pane is visible. r=gds,tobyp

This changes the status bar output to have FIFO queue (max size 10) of status messages.
If there's a queue, next message will be shown in 750ms, and then moving on the the next one until the queue is empty.
This allows the status messages to be seen before next message overwrites the previous one.
There are situations where there may be a whole lot of updates, in which case it seems ok to just
drop those messages (see bug 1864776). It just gets confusing in case the status updates are way late.

Differential Revision: https://phabricator.services.mozilla.com/D232320

--HG--
extra : rebase_source : 0809c7bf5adb44eea06ca4db2353fa0e9c0ef6c6
extra : amend_source : 0ffe73129a308f50acc245849dfe2fef990e17b2